--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Sports DB-API</title>
 
+    <!-- ================== Favicon Css ================== -->
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+
     <!-- ================== Custom Css ================== -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     
-
+    <h1>Search your favourite Team</h1>
+    <div id="search_control">
+        <input id="searchField" type="text" placeholder="Search Food">
+        <button onclick="loadPlayer()">Search</button>
+    </div>
 
 
 
