find any football clud with search

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <input id="searchField" type="text" placeholder="Search Food">
         <button onclick="loadPlayer()">Search</button>
     </div>
+    <section id="player_container"></section>
 
 
 
